2006-12-08  Øystein Gisnås  <oystein@gisnas.net>

	* Ported GUnit unit tests to Check

2006-12-08  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the tny_folder_transfer_msgs_async API
	* Implemented for libtinymail-camel
	* Fixed some progress/status numbers and changed its API

	*  This was a major API change

2006-12-07  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-header.c: Added a default camel
	implementation for tny_header_set/get_replyto

2006-12-06  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the tny_folder_get_msg_async API
	* Implemented tny_camel_folder_get_msg_async

	* This was a major API change in libtinymail

2006-12-01  Philip Van Hoof <pvanhoof@gnome.org>

	* Support for content-objects in RFC822 messages

	* This was a major API change

2006-11-30  Sergio Villar Senin <svillar@igalia.com>
	* libtinymail-camel/tny-camel-common.c: a store query with no items
	filters nothing

2006-11-30  Philip Van Hoof <pvanhoof@gnome.org>

	* Bugfixes and Maildir implementations for TnyCamelSendQueue
	* Renamed TnyGtkAccountTreeModel to TnyGtkFolderTreeModel and adapted
	the type to accept any TnyFolderStore instance

	* This was a major API change in libtinymailui-gtk

2006-11-28  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed various locking and error handling problems
	* Fixed support for unread-message count

2006-11-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the first pieces for error reporting and support
	* Added error reporting and checking in a lot methods and types
	* Adapted the Python bindings to support error checking

	* This was a major API change in all libraries

2006-11-27  Øystein Gisnås <oystein@gisnas.net>

	* Added an API unit test suite for testing
	  against libraries currently installed on the system

2006-11-26  muppet <scott@asofyet.org>

	* tools/gtypeinterface-h-files-to-c-file.pl: Rewrite and major
	improvements

2006-11-26  Philip Van Hoof <pvanhoof@gnome.org>
