@@ -44,6 +44,7 @@ enum _TnyError
 	TNY_FOLDER_ERROR_GET_MSG,
 	TNY_FOLDER_ERROR_TRANSFER_MSGS,
 	TNY_FOLDER_ERROR_SET_NAME,
+	TNY_FOLDER_ERROR_COPY,
 
 	TNY_FOLDER_STORE_ERROR_REMOVE_FOLDER,
 	TNY_FOLDER_STORE_ERROR_GET_FOLDERS,
